[package]
name = "smart-paste"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
eframe = "0.25.0"
egui = "0.25.0"
enigo = "0.2.0-rc2"
global-hotkey = "0.4.2"
image = "0.24.8"

[build-dependencies]
winres = "0.1.12"
